--- a/video.html
+++ b/video.html
@@ -40,11 +40,13 @@
         .video-overlay {
             position: absolute;
             top: 20px;
-            left: 20px;
+            left: 50%;
+            transform: translateX(-50%);
             z-index: 10;
             color: #00ff00;
             font-family: 'Orbitron', monospace;
             text-shadow: 0 0 10px #00ff00;
+            text-align: center;
         }
         
         .video-title {
@@ -540,5 +542,4 @@
         });
     </script>
 </body>
-</html>
 </html>
