--- a/index.html
+++ b/index.html
@@ -246,6 +246,21 @@
 
     </div>
 
+    <!-- Modal de Mensaje Cultural -->
+    <div id="culturalModal" class="modal" style="display: none;">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 id="culturalTitle" class="modal-title">Mensaje Cultural</h2>
+                <span class="close-modal">&times;</span>
+            </div>
+            <div class="modal-body">
+                <div id="culturalMessage" class="cultural-message">
+                    <!-- El mensaje se insertará aquí dinámicamente -->
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Scripts -->
     <script src="script.js"></script>
     <script>
